fix: [FFM-3447]: more spacing to accomodate trial banner (#9029)

--- a/src/modules/75-cf/components/FlagActivation/FlagActivation.module.scss
+++ b/src/modules/75-cf/components/FlagActivation/FlagActivation.module.scss
@@ -9,18 +9,19 @@
   width: 200px !important;
 }
 
-// this will be deprecated once FFM-1513 is complete
-.tabContainerHeight {
-  height: calc(100% - 140px);
-  overflow-y: auto;
+:global([data-trial-banner-is-visible] ~ * [data-tab-container]) {
+  height: calc(100vh - 200px);
 }
 
 .tabContainer {
+  height: calc(100% - 160px);
+  overflow-y: auto;
   :global {
     .bp3-tab-list {
       border-bottom: 1px solid var(--grey-200) !important;
       background-color: var(--white);
       padding-left: var(--spacing-xlarge);
+      overflow-y: auto;
     }
   }
 }
